--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ pandas==2.2.1
 rdkit==2023.9.5
 scipy==1.13.1
 timeout_decorator==0.5.0
-git+https://github.com/ersilia-os/smiles-to-3d.git
+git+https://github.com/ersilia-os/smiles-to-3d
+git+https://github.com/ersilia-os/vsflow-ligand-based-3d-screening
+git+https://github.com/czodrowskilab/VSFlow
