major refactor to include sensaas

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
-pandas==2.2.1
-rdkit==2023.9.5
-scipy==1.13.1
+pandas
+scipy
 timeout_decorator==0.5.0
 rdkit==2023.9.5
-matplotlib==3.8.4
+matplotlib
 fpdf==1.7.2
 xlrd==2.0.1
 pdfrw==0.4
 xlsxwriter==3.1.9
 molvs==0.1.1
+numpy
+addict
+ipywidgets
+notebook
+plyfile
+pyyaml
+scikit-learn
+tqdm
+widgetsnbextension
 git+https://github.com/czodrowskilab/VSFlow
 git+https://github.com/ersilia-os/smiles-to-3d
